fade in fade out

--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
 		}
 		.clip {
 			color: #42f48f;
-			transition: all 1s ease-out;
 			padding-top: 0px;
 			margin:0;
 			margin-top: 10px;
@@ -64,6 +63,17 @@
 		}
 		.hidden {
 			visibility: hidden;
+		}
+
+		.m-fadeOut {
+			visibility: hidden;
+			opacity: 0;
+			transition: visibility 0s linear 500ms, opacity 1s;
+		}
+		.m-fadeIn {
+			visibility: visible;
+			opacity: 1;
+			transition: visibility 0s linear 0s, opacity 800ms;
 		}
 	</style>
 </head>
@@ -117,7 +127,7 @@
 
 		<div class='row'>
 			<button class='btn' id='gen-button'>Generate Tokens</button>
-			<p class="clip hidden"></p>
+			<p class="clip m-fadeOut"></p>
 		</div>
 		
 	</div>
@@ -151,12 +161,13 @@
 
 		function showMsg(msg) {
 			document.querySelector('.clip').innerHTML = msg;
-			document.querySelector('.clip').classList.remove('hidden');		
+  			document.querySelector('.clip').classList.toggle("m-fadeIn");
+  			document.querySelector('.clip').classList.toggle("m-fadeOut");
 		}
 
 		function hideMsg() {
-			document.querySelector('.clip').classList.add('hidden');
-			document.querySelector('.clip').innerHTML = '';
+			document.querySelector('.clip').classList.toggle("m-fadeIn");
+			document.querySelector('.clip').classList.toggle("m-fadeOut");
 		}
 
 		function generateAuthentication () {
